Renamed the "clear" script to "clean".

--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "build": "gulp build",
     "cbuild": "gulp cbuild",
     "start": "gulp start",
-    "clear": "gulp clear"
+    "clean": "gulp clean"
   }
 }
