--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
   "devDependencies": {
     "del": "~3.0.0",
     "electron": "~1.7.9",
-    "electron-builder": "~19.43.0",
+    "electron-builder": "~19.49.0",
     "gulp": "~3.9.1",
-    "gulp-cli": "~1.4.0",
+    "gulp-cli": "~2.0.0",
     "gulp-typescript": "~3.2.3",
     "tslint": "~5.8.0",
-    "typescript": "~2.5.3",
-    "webpack": "~3.10.0"
+    "typescript": "~2.6.2"
   },
   "scripts": {
     "build": "gulp build",
