--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "gulp-cli": "~2.0.1",
     "gulp-typescript": "~3.2.4",
     "tslint": "~5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "build": "gulp build",
