--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "del": "~3.0.0",
-    "electron": "~1.7.11",
-    "electron-builder": "~19.55.2",
-    "gulp": "~3.9.1",
-    "gulp-cli": "~2.0.1",
-    "gulp-typescript": "~3.2.4",
-    "tslint": "~5.9.1",
-    "typescript": "~2.6.2",
-    "run-sequence": "^2.2.1"
+    "del": "^3.0.0",
+    "electron": "^1.8.2",
+    "electron-builder": "^20.0.5",
+    "gulp": "^3.9.1",
+    "gulp-cli": "v2.0.1",
+    "gulp-typescript": "^4.0.1",
+    "run-sequence": "^2.2.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2"
   },
   "scripts": {
     "build": "gulp build",
