--- a/package.json
+++ b/package.json
@@ -37,14 +37,13 @@
   "dependencies": {},
   "devDependencies": {
     "del": "^3.0.0",
-    "electron": "^1.8.4",
-    "electron-builder": "^20.10.0",
-    "gulp": "^3.9.1",
-    "gulp-cli": "v2.0.1",
+    "electron": "^3.0.8",
+    "electron-builder": "^20.31.2",
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.0.1",
     "gulp-typescript": "^4.0.2",
-    "run-sequence": "^2.2.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.3"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
   },
   "scripts": {
     "build": "gulp build",
